# robertcrummett.com

./: .gitattributes  .gitignore  APOLOGY  CMakeLists.txt  ENTRY  Makefile  README  README.md  _redirects  about.html  build.sh  code.html  contact.html  cos.h  cosine.h  egm84.h  gentable.py  geoid-figure.c  geoid-figure.js  geoid-figure.wasm  geoid.c  geoid.js  geoid.wasm  index.html  load-posters.js  load-projects.js  main.js  projects.html  site.webmanifest  style.css  trig.h  wasm32-toolchain.cmake  xalf.f90  xalf.h
about/: index.html
assets/code-snippets/: in-progress.c
assets/posters/: radiometrics-image-2025.dzi
assets/posters/radiometrics-image-2025_files/: vips-properties.xml
assets/presentations/: dcip-aegc-2025.dzi
assets/presentations/dcip-aegc-2025_files/: vips-properties.xml
assets/presentations/radiometrics-aegc-2025_files/: vips-properties.xml
assets/wasm/: geoid.wasm
assets/writing/: essay-ram-2025.dzi
assets/writing/essay-ram-2025_files/: vips-properties.xml
blogs/: exponential_integral_altitude_corrections.html  test.html
code/: index.html  randomize-projects.js
code/raw/: hello-world.c
components/: footer.html  nav.html
contact/: index.html
css/: common.css
gallery/: index.html  load-posters.js  style.css
js/: load-components.js  load-posters.js  main.js  randomize-projects.js
notes/: probability_theory_algebras.html
pages/about/: index.html
pages/code/: index.html  style.css
pages/contact/: index.html  style.css
pages/gallery/: index.html
posters/ameposter_files/: vips-properties.xml
src/c/: geoid.c  walloc.c
src/headers/: egm84.h  walloc.h
thoughts/: TEMPLATE  analytic_functions.html  convex_functions.html  limit_superior_limit_inferior.html  luke_22.html  obfuscate_program.html  orogenic_gold_deposits.html  probability_theory_algebras.html  probability_theory_convergence.html  probability_theory_convergence_program.html  probability_theory_markovs_inequality.html  test.html
writing/: orogenic_gold_deposits.html
